--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@ input[type=number]::-webkit-outer-spin-button {
 .bg2{
   background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 }
+
+.bgShadow{
+  box-shadow: 5px 5px 20px, -5px -5px 20px;
+}
